--- a/Ergasia2/src/main/webapp/CSS/styles.css
+++ b/Ergasia2/src/main/webapp/CSS/styles.css
@@ -1,4 +1,4 @@
-/* This file contains style rules for the pages that each servlet returns to the client */
+/* This file contains style rules for the pages that each servlet returns back to the client */
 
 /* set border, padding and background colour to the form */
 form
@@ -128,6 +128,14 @@ h1
     letter-spacing:6px;
 }
 
+/* style rules for every h3 in this web page */
+h3
+{
+    font-size:18px;
+    text-align:center;
+    color: #012A6C;
+}
+
 /* style rules for the select section */
 select
 {
@@ -137,4 +145,12 @@ select
     display: inline-block;
     box-sizing: border-box;
     border:1px solid #012A6C;
+}
+
+/* style rules for every article section */
+article
+{
+    border: 3px solid whitesmoke;
+    background-color: white ;
+    padding: 16px;
 }
