Εβαλα τα επιπλέον κουμπιά που θέλει ο admin.

--- a/Ergasia3/src/main/webapp/CSS/styles.css
+++ b/Ergasia3/src/main/webapp/CSS/styles.css
@@ -101,7 +101,7 @@ table
     align:center;
 }
 
-/* style rules for every table heading of the table */
+/* style rules for every table header of the table */
 th
 {
     width:150px;
