--- a/Ergasia3/src/main/webapp/CSS/styles.css
+++ b/Ergasia3/src/main/webapp/CSS/styles.css
@@ -14,6 +14,12 @@ form
     font-family:candara;
 }
 
+/* set style rules for the container class */
+.container
+{
+    padding: 10px;
+}
+
 /* style rules for the body of the page */
 body
 {
